--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.3.1",
+    "uuid": "^9.0.0",
+    "mongodb": "^5.7.0",
+      "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1",
     "jest": "^29.5.0",
-    "mongodb": "^5.7.0",
     "mongodb-memory-server": "^8.13.0",
-    "mongoose": "^7.3.1",
-    "supertest": "^6.3.3",
-    "uuid": "^9.0.0"
+    "supertest": "^6.3.3"
   },
   "jest": {
     "collectCoverageFrom": [
